refactor: 使用Collections.emptyMap()替代Map.of()以提高可读性